trunk/Source/include/ODEImport.hpp



typedef int TBodyFlags;


typedef float TdReal;


typedef float *PdReal;

typedef TdxJointGroup *PdxJointGroup;


typedef PdxJointGroup TdJointGroupID;



typedef System::StaticArray<float, 16> TdRealArray;


typedef TdRealArray *PdRealArray;


typedef System::StaticArray<float, 4> TdVector3;


typedef TdVector3 *PdVector3;


typedef System::StaticArray<float, 4> TdVector4;


typedef TdVector4 *PdVector4;


typedef System::StaticArray<float, 12> TdMatrix3;


typedef TdMatrix3 *PdMatrix3;


typedef System::StaticArray<System::StaticArray<float, 4>, 3> TdMatrix3_As3x4;


typedef System::StaticArray<float, 16> TdMatrix4;


typedef TdMatrix4 *PdMatrix4;


typedef System::StaticArray<float, 48> TdMatrix6;


typedef TdMatrix6 *PdMatrix6;


typedef TdVector4 TdQuaternion;


typedef TdVector4 *PdQuaternion;


typedef System::StaticArray<float, 6> TdAABB;


struct DECLSPEC_DRECORD TdMass
{
public:
	float mass;
	TdVector4 c;
	TdMatrix3 I;
};



typedef TdMass *PdMass;


struct DECLSPEC_DRECORD TdxAutoDisable
{
public:
	float idle_time;
	int idle_steps;
	float linear_average_threashold;
	float angular_average_threashold;
	unsigned average_samples;
};



struct DECLSPEC_DRECORD TdxDampingParameters
{
public:
	float linear_scale;
	float angular_scale;
	float linear_threahold;
	float angular_threashold;
};



struct DECLSPEC_DRECORD TdxContactParameters
{
public:
	float max_vel;
	float min_depth;
};



struct DECLSPEC_DRECORD TdxQuickStepParameters
{
public:
	int num_iterations;
	float w;
};



struct TdxGeom;


typedef void __cdecl (*TdMovedCallback)(PdxGeom o1);


struct TdxWorld;

typedef TdxWorld *PdxWorld;


struct TdObject;

typedef TdObject *PdObject;


typedef PdObject *PPdObject;


struct DECLSPEC_DRECORD TdObject
{
public:
	TdxWorld *World;
	TdObject *next;
	PdObject *tome;
	void *userdata;
	int tag;
};



struct TdxBody;

typedef TdxBody *PdxBody;


struct TdxJoint;

typedef TdxJoint *PdxJoint;


typedef PdxJoint TdJointID;



struct DECLSPEC_DRECORD TdxJoint
{
public:
	TdObject baseObject;
	TJointInfo1 Info1;
	TJointInfo2 Info2;
};



struct DECLSPEC_DRECORD TdxPosR
{
public:
	TdVector3 pos;
	TdMatrix3 R;
};


struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject BaseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};

struct DECLSPEC_DRECORD TdxWorld
{
public:
	TdxBody *firstbody;
	TdxJoint *firstjoint;
	int nb;
	int nj;
	TdVector3 gravity;
	float global_erp;
	float global_cfm;
	TdxAutoDisable adis;
	int body_flags;
	TdxQuickStepParameters qs;
	TdxContactParameters contactp;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};


enum TdJointTypeNumbers : unsigned char { dJointTypeNone, dJointTypeBall, dJointTypeHinge, dJointTypeSlider, dJointTypeContact, dJointTypeUniversal, dJointTypeHinge2, dJointTypeFixed, dJointTypeNull, dJointTypeAMotor, dJointTypeLMotor, dJointTypePlane2D, dJointTypePR, dJointTypePU, dJointTypePiston };



struct DECLSPEC_DRECORD TdxGeom
{
public:
	int _type;
	System::Byte Padding;
	int gflags;
	void *data;
	TdxBody *Body;
	TdxGeom *body_next;
	TdxPosR *final_posr;
	TdxPosR *offset_posr;
	TdxGeom *next;
	PdxGeom *tome;
	TdxSpace *parent_space;
	TdAABB aabb;
	unsigned category_bits;
	unsigned collide_bits;
};


//-- var, const, procedure ---------------------------------------------------
#define ODEDLL L"ode_single.dll"

extern PACKAGE int dxBodyFlagFiniteRotation;

extern PACKAGE int dxBodyFlagFiniteRotationAxis;

extern PACKAGE int dxBodyDisabled;

extern PACKAGE int dxBodyNoGravity;